# physics_simulator

./: .gitignore  CMakeLists.txt  README.md
dependencies/include/glad/: glad.h
shaders/: v_shader.txt
shaders/vertex_shaders/: v_shader.txt  v_shader_menu.txt
src/: camera.h  glad.c  main.cpp  main.h
src/core/: shader.h
src/menus/: main_menu.cpp  main_menu.h
src/physics/: collision.cpp  collision.h
src/settings/: constants.h  particles.h
src/simulations/: collisions_with_balls.cpp  collisions_with_balls.h  simulation.cpp
src/structs/: button.h  particle.h
